--- a/index.html
+++ b/index.html
@@ -61,13 +61,12 @@
     </div>
 
     <section class="carta">
-
         <div class="grid-container">
             <div class="grid-item item1">
-                <h1>MENU</h1>
+                <h1>MENÚ</h1>
             </div>
             <div class="grid-item item2">
-                <h1>MENU1</h1>
+                <h1>MENÚ 1</h1>
             </div>
             <div class="grid-item item3">
                 <h1 class="texCarta"><strong>Contingut</strong></h1>
@@ -77,14 +76,83 @@
                     incidunt voluptate aut ut velit. Lorem ipsum dolor sit, amet
                     consectetur adipisicing elit. Aperiam vel cum quaerat architecto
                     fugiat unde reprehenderit totam nihil at, sequi dignissimos minima
-                    sunt error ipsam velit cupiditate numquam cumque molestiae.</p>
+                    sunt error ipsam velit cupiditate numquam cumque molestiae. Lorem ipsum
+                    dolor sit amet consectetur adipisicing elit. Ut, quibusdam nobis numquam aliquam
+                    tempore minima, possimus aperiam doloremque nemo quasi aliquid. Pariatur aut quis
+                    quas quo qui natus, vel tempora!
+                </p>
             </div>
-            <div class="grid-item item4"><img class="imgMenu" src="imagenes/images (8).jpg"></div>
-            <div class="grid-item item5"><img class="imgMenu" src="imagenes/images (7).jpg"></div>
+            <div class="grid-item item4"><img class="imgMenu" src="imagenes/images (9).jpg"></div>
+            <div class="grid-item item5"><img class="imgMenu" src="imagenes/images (9).jpg"></div>
+        </div>
+
+        <section class="carta2">
+
+            <div class="grid-container">
+                <div class="grid-item item1">
+                </div>
+                <div class="grid-item item2">
+                    <h1>MENÚ 1</h1>
+                </div>
+                <div class="grid-item item3">
+                    <h1 class="texCarta"><strong>Contingut</strong></h1>
+                    <p class="texCarta">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Pariatur dolor nam illum incidunt nemo natus, dolore perspiciatis?
+                        Adipisci repellat est rerum. Provident molestias doloremque quae
+                        incidunt voluptate aut ut velit. Lorem ipsum dolor sit, amet
+                        consectetur adipisicing elit. Aperiam vel cum quaerat architecto
+                        fugiat unde reprehenderit totam nihil at, sequi dignissimos minima
+                        sunt error ipsam velit cupiditate numquam cumque molestiae. Lorem ipsum
+                        dolor sit amet consectetur adipisicing elit. Ut, quibusdam nobis numquam aliquam
+                        tempore minima, possimus aperiam doloremque nemo quasi aliquid. Pariatur aut quis
+                        quas quo qui natus, vel tempora!
+                    </p>
+                </div>
+                <div class="grid-item item4"><img class="imgMenu" src="imagenes/images (7).jpg"></div>
+                <div class="grid-item item5"><img class="imgMenu" src="imagenes/images (7).jpg"></div>
+            </div>
+        </section>
+
+        <div class="separadorCarta2">
+            <h1>Galeria d'imatges</h1>
         </div>
 
 
+        <div class="contenedor">
+            <div class="boton">
+                <img src="imagenes/images (5).jpg" alt="Botón 1">
+            </div>
+            <div class="boton">
+                <img src="imagenes/images (5).jpg" alt="Botón 2">
+            </div>
+            <div class="boton">
+                <img src="imagenes/images (5).jpg" alt="Botón 3">
+            </div>
+            <div class="boton">
+                <img src="imagenes/images (5).jpg" alt="Botón 4">
+            </div>
+            <div class="boton">
+                <img src="imagenes/images (5).jpg" alt="Botón 5">
+            </div>
+            <div class="boton">
+                <img src="imagenes/images (5).jpg" alt="Botón 6">
+            </div>
+            <div class="boton">
+                <img src="imagenes/images (5).jpg" alt="Botón 7">
+            </div>
+            <div class="boton">
+                <img src="imagenes/images (5).jpg" alt="Botón 8">
+            </div>
+        </div>
     </section>
+    
+    <footer>
+        <div>
+            <div><a href="www.google.com">example@example.com</a></div>
+            <div><a href="www.google.com">999 99 99 99</a></div>
+            <div><a href="www.google.com">Restauran els coberts</a></div>
+        </div>
+    </footer>
 </body>
 
 </html>
